--- a/src/Search.css
+++ b/src/Search.css
@@ -1,3 +1,7 @@
+:root {
+  --main-color: #878787;
+}
+
 .row {
   display: flex;
   flex-direction: row;
@@ -29,12 +33,54 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+h1 {
+  color: var(--main-color);
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-left: 20px;
+  margin-bottom: 0;
+}
+
+ul {
+  margin-bottom: 0 20px;
+  margin-left: 20px;
+  padding: 0;
+}
 li {
   list-style: none;
   margin: 0;
   padding: 0;
-  color: rgb(135, 135, 135);
+  color: var(--main-color);
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
+}
+.Search {
+  display: inline-block;
+  padding-bottom: 5px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+input[type="search"] {
+  display: inline-block;
+  border: none;
+  box-shadow: 0 3px 2px 1px #dedede;
+  width: 350px;
+  height: 40px;
+  outline: 0;
+  margin-right: 10px;
+}
+::placeholder {
+  font-size: 18px;
+}
+input[type="submit"],
+.btn {
+  display: inline-block;
+  height: 40px;
+  font-size: 20px;
+  font-weight: 400;
+  padding: 5px 10px;
+  margin-left: 7px;
 }
