--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,16 @@
   margin: 20px auto;
   max-width: 600px;
 }
+.Contact {
+  font-size: 14px;
+  margin-top: 20px;
+  line-height: 18px;
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+}
+a {
+  color: rgba(39, 33, 66, 0.4);
+}
+:a hover {
+  color: blue;
+}
