--- a/src/Search.css
+++ b/src/Search.css
@@ -10,7 +10,7 @@
   margin-left: -15px;
 }
 img {
-  margin-left: 20px;
+  margin-left: -5px;
   margin-right: 5px;
   height: 64px;
   width: 64px;
@@ -39,13 +39,13 @@ h1 {
   font-size: 24px;
   font-weight: 100;
   line-height: 28px;
-  margin-left: 20px;
+  margin-left: 2px;
   margin-bottom: 0;
 }
 
 ul {
   margin-bottom: 0 20px;
-  margin-left: 20px;
+  margin-left: 2px;
   padding: 0;
 }
 li {
@@ -83,4 +83,22 @@ input[type="submit"],
   font-weight: 400;
   padding: 5px 10px;
   margin-left: 7px;
+}
+.HumWin {
+  margin-top: 20px;
+  margin-left: 120px;
+}
+.Weather {
+  margin-top: 20px;
+}
+.WeatherForecast {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.unit {
+  position: relative;
+  top: -32px;
+}
+.unit a {
+  color: black;
 }
