--- a/src/Search.css
+++ b/src/Search.css
@@ -102,3 +102,11 @@ input[type="submit"],
 .unit a {
   color: black;
 }
+
+.forecast-temperature-min {
+  opacity: 0.7;
+  margin-left: 4px;
+}
+.WeatherForecastPreview {
+  text-align: center;
+}
